# scry

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: config.yaml  features.yaml
docs/: architecture.md  data-contract.md  incident-capture-runbook.md  ingestion.md  roadmap.md  training.md
examples/: generate_sample_data.py  quickstart.md
examples/sample_data/: metrics.parquet
logicmodules/: README.md  REMEDIATION_DESIGN.md  external_alert_handler.ps1
logicmodules/dashboards/: Scry_ModelHealth_Dashboard.json  Scry_Predictive_Dashboard.json
logicmodules/datasources/: Scry_Accuracy.xml  Scry_Anomaly.xml  Scry_Drift.xml  Scry_Predictive.xml
logicmodules/propertysources/: Scry_Predictive_Props.xml
scripts/: bake_serving_threshold.py  capture_incident.py  export_logicmonitor.py  extract_features.py  healthy_fleet_report.py  train_model.py  validate_data.py  validate_incident.py
src/scry/: __init__.py
src/scry/api/: __init__.py  forecaster.py  main.py  predictor.py  schemas.py
src/scry/config/: __init__.py  auto_discovery.py  loader.py
src/scry/data/: __init__.py  feature_engineering.py  fetcher.py  pipeline.py  quality.py  windowing.py
src/scry/data/sources/: __init__.py  base.py  http_ingest.py  lm_export.py  object_store.py
src/scry/model/: __init__.py  checkpoint.py  clustering.py  decoders.py  drift.py  encoders.py  evaluate.py  export.py  losses.py  reconstruction.py  trainer.py  xdec.py  xvae.py
src/scry/utils/: __init__.py  config.py  tracing.py
tests/: __init__.py  conftest.py  synth.py  test_accuracy_datasource.py  test_accuracy_endpoint.py  test_accuracy_tracker.py  test_anomaly_endpoint.py  test_api.py  test_bake_serving_threshold.py  test_capture_incident.py  test_checkpointing.py  test_chronos_wrapper.py  test_clustering.py  test_config.py  test_decoders.py  test_drift_datasource.py  test_drift_detection.py  test_encoders.py  test_enriched_pipeline.py  test_evaluate.py  test_export.py  test_feature_engineering.py  test_fetcher.py  test_forecast_anomaly.py  test_forecast_endpoint.py  test_health_detailed.py  test_healthy_fleet_report.py  test_integration_enriched_training.py  test_lm_export.py  test_losses.py  test_object_store.py  test_pipeline.py  test_predictor.py  test_quality.py  test_reconstruction.py  test_reconstruction_endpoint.py  test_residual_features.py  test_schemas.py  test_trainer.py  test_validate_incident.py  (+2 more)
(+6 files in other folders)
