# Description: Project configuration for scry, a temporal infrastructure failure-prediction tool.
# Description: Distribution name "scryml" (scry is taken on PyPI); import package "scry".

[project]
name = "scryml"
version = "0.2.0"
description = "Predict infrastructure failure states from a stream of metrics"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "ryanmat" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "duckdb>=1.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34.0"]
azure = ["azure-identity>=1.15.0"]
logicmonitor = ["httpx>=0.26.0"]
forecast = ["transformers>=4.35.0", "chronos-forecasting>=2.0"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
]
mcp = []  # reserved for the phase-2 MCP server
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "matplotlib>=3.8.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/ryanmat/scry"
Repository = "https://github.com/ryanmat/scry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
